--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "wangdahoo <157195705@qq.com>",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "test": "mocha --exit"
   },
   "license": "MIT",
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.2.0",
     "lint-staged": "^8.1.6",
+    "mocha": "^6.1.4",
     "prettier": "^1.17.0",
     "prettier-eslint-cli": "^4.7.1",
     "rollup": "^1.11.2",
