--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.2.0",
+    "jsdom": "^15.0.0",
     "lint-staged": "^8.1.6",
     "mocha": "^6.1.4",
     "prettier": "^1.17.0",
