--- a/.editorconfig
+++ b/.editorconfig
@@ -21,7 +21,7 @@ indent_size = 4
 indent_style = tab
 
 # Indentation override for all JS under lib directory
-[*.js]
+[*.{js,html}]
 indent_style = space
 indent_size = 2
 
