--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "wangdahoo <157195705@qq.com>",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "mocha --require @babel/register --exit",
-    "test:search": "mocha --timeout 10000 test/utils/runner.js test/search.test.js --exit",
-    "lint": "lint-staged ."
+    "test": "mocha --require @babel/register --timeout 10000 --exit",
+    "lint": "lint-staged .",
+    "serve": "serve .",
+    "watch": "rollup -c -w",
+    "dev": "npm-run-all -p watch serve"
   },
   "license": "MIT",
   "devDependencies": {
@@ -31,6 +32,7 @@
     "husky": "^2.2.0",
     "lint-staged": "^8.1.6",
     "mocha": "^6.1.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "prettier-eslint-cli": "^4.7.1",
     "puppeteer": "^1.15.0",
@@ -38,6 +40,7 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
+    "serve": "^11.0.0",
     "slug": "^1.1.0"
   },
   "dependencies": {
